--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,134 @@
-.Дәмді>a{
+.Дәмді>a {
     text-decoration: none;
     color: black;
 }
 
 
-    
-    
-    
+.text_1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 200%;
+    color: peru;
+}
+
+.text_2 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 180%;
+}
+
+.can {
+    background-color: peru;
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 5px;
+    color: white;
+    padding: 10px;
+    border-color: peru;
+
+}
+
+.image-center {
+    display: block;
+    margin: auto;
+}
+
+.we {
+    color: peru;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    text-align: center;
+}
+
+.got {
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 30px;
+}
+
+.sev {
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 18px;
+}
+
+.txt {
+    background-color: peru;
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 5px;
+    color: white;
+    padding: 10px;
+    border-color: peru;
+    margin: 5px 93px;
+}
+
+.photo_2>img {
+    width: 440px;
+    height: 260px;
+    border-radius: 15px;
+}
+
+.text_3 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 160%;
+    color: peru;
+    text-align: center;
+
+}
+
+.fork {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    text-align: center;
+}
+
+.photo_3>img {
+    width: 180px;
+    height: 200px;
+    display: block;
+    margin: auto;
+}
+
+.sev2 {
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 17px;
+}
+
+
+.photo_4>img {
+    width: 180px;
+    height: 200px;
+    display: block;
+    margin: auto;
+    display: block;
+    margin: auto;
+}
+.fast-food{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 45px;
+    text-align: center;
+}
+.food{
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 19px;
+}
+.car>img {
+    width: 180px;
+    height: 200px;
+    display: block;
+    margin: auto;
+    display: block;
+    margin: auto;
+}
+.text_4{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 45px;
+    text-align: center;
+}
+
+.text_4-1{
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 19px;
+}
