--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.Дәмді>a {
+.Дәмді>p {
     text-decoration: none;
     color: black;
 }
@@ -256,3 +256,4 @@
     height: 50px;
     margin-top: 20px;
   }
+
